--- a/README
+++ b/README
@@ -1,3 +1,4 @@
-This is the data set for my build week. I used the ports-reference api to pull data from. https://www.pro-football-reference.com
+This is the data set for my build week. I used the sports-reference api to pull data from [pro football reference](https://www.pro-football-reference.com). 
 
-This api was created by Robert Clark, please visit his profile and blog on medium for further reference. https://medium.com/clarktech-sports/python-sports-analytics-made-simple-part-2-40e591a7f3db
+This api was created by Robert Clark, please visit his [profile and blog on medium](https://medium.com/clarktech-sports/python-sports-analytics-made-simple-part-2-40e591a7f3db
+) for further reference.
